--- a/assets/styles.css
+++ b/assets/styles.css
@@ -30,7 +30,7 @@ body{
   border: 0px;
   margin: 0px;
   padding: 0px;
-
+ height: 100vh;
 }
 
 .txtt{
@@ -236,6 +236,7 @@ top:865px;
   top:1511px;
 }
 #particles-js{
+  position: relative;
   height: 100%;
-  background-color: #aabbff;
+  background-color: #222222;
 }
